--- a/index.css
+++ b/index.css
@@ -136,8 +136,7 @@ svg:hover > path {
 	bottom: 0px;
 	width: 100%;
 	height: 6vw;
-	background: transparent;
-	background: rgba(0,0,0,.40);
+	background: linear-gradient(to bottom, rgba(0,0,0,.40), transparent);
 	padding: 30px;
 }
 
@@ -190,6 +189,11 @@ svg:hover > path {
     background-position: -428px 5px;
     position: relative;
     left: 120px;
+}
+
+#player{
+	z-index: 10000000;
+	background: transparent;
 }
 
 #player .progress{
