--- a/index.css
+++ b/index.css
@@ -50,6 +50,7 @@ body{
 	left: 0;
 	width: 100%;
 	background-size: cover;
+	transition: 0.4;
 }
 
 #loading .opa{
@@ -106,25 +107,28 @@ svg:hover > path {
 	margin-left: 20px;
 	cursor: pointer;
 	transition: 0.5s;
+	margin-top: 10px;
 }
 
 .play{
 	background-repeat: no-repeat;
     background-size: auto;
-    background-position: -111px 5px;
+    background-position: -72px 5px;
     position: relative;
     left: 40px;
+    transition: 0.1s;
 }
 
 .back{
 	background-repeat: no-repeat;
     background-size: auto;
-    background-position: -20px 11px;
+    background-position: -14px 10px;
     cursor: pointer;
     position: relative;
     left: 50px;
     top: 30px;
     transition: 0.8s;
+    z-index: 10000000000000;
 }
 
 .icon:hover{
@@ -138,12 +142,13 @@ svg:hover > path {
 	height: 6vw;
 	background: linear-gradient(to bottom, rgba(0,0,0,.40), transparent);
 	padding: 30px;
+	z-index: 10000000000000;
 }
 
 .back1{
 	background-repeat: no-repeat;
     background-size: auto;
-    background-position: -218px 5px;
+    background-position: -253px 5px;
     position: relative;
     left: 70px;
 }
@@ -151,7 +156,7 @@ svg:hover > path {
 .back2{
 	background-repeat: no-repeat;
     background-size: auto;
-    background-position: -318px 5px;
+    background-position: -355px 5px;
     position: relative;
     left: 90px;
 }
@@ -159,7 +164,7 @@ svg:hover > path {
 .help{
 	background-repeat: no-repeat;
     background-size: auto;
-    background-position: 10px -75px;
+    background-position: 4px -75px;
     position: absolute;
     right: 26vw;
     float: right;
@@ -168,7 +173,7 @@ svg:hover > path {
 .legenda{
 	background-repeat: no-repeat;
     background-size: auto;
-    background-position: -100px -75px;
+    background-position: -109px -75px;
     position: absolute;
     right: 20vw;
     float: right;
@@ -186,9 +191,10 @@ svg:hover > path {
 .volume{
 	background-repeat: no-repeat;
     background-size: auto;
-    background-position: -428px 5px;
+    background-position: -526px 5px;
     position: relative;
     left: 120px;
+    transition: 0.3s;
 }
 
 #player{
@@ -205,6 +211,8 @@ svg:hover > path {
 	bottom: 0.18vw;
 	border-radius: 5px;
 	transform: scale(0.90);
+	cursor: pointer;
+	transition: 0.4s;
 }
 
 #player .progress .subprogress{
@@ -246,5 +254,119 @@ svg:hover > path {
 #player .bottom{
 	transform: scale(1.05);
 	left: 2.5vw;
-	height: 6vw;
+	height: 5vw;
+}
+
+#player #video{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 100000000;
+}
+
+#player #video video{
+	width: 100%;
+	height: 100%;
+	position: fixed;
+	top: 0;
+	left: 0;
+}
+
+input{
+	background: transparent !important;
+}
+
+input[type=range] {
+  height: 25px;
+  -webkit-appearance: none;
+  width: 100%;
+  left: -5vw;
+  position: absolute;
+  transform: scale(0.85);
+  z-index: 100000000000;
+}
+input[type=range]:focus {
+  outline: none;
+}
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: #2497E3;
+  border-radius: 1px;
+  border: 0px solid #000000;
+}
+input[type=range]::-webkit-slider-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #2497E3;
+  height: 18px;
+  width: 18px;
+  border-radius: 25px;
+  background: #A1D0FF;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -7px;
+}
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: #2497E3;
+}
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  animate: 0.2s;
+  box-shadow: 0px 0px 0px #000000;
+  background: #2497E3;
+  border-radius: 1px;
+  border: 0px solid #000000;
+}
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #2497E3;
+  height: 18px;
+  width: 18px;
+  border-radius: 25px;
+  background: #A1D0FF;
+  cursor: pointer;
+}
+input[type=range]::-ms-track {
+  width: 100%;
+  height: 5px;
+  cursor: pointer;
+  animate: 0.2s;
+  background: transparent;
+  border-color: transparent;
+  color: transparent;
+}
+input[type=range]::-ms-fill-lower {
+  background: #2497E3;
+  border: 0px solid #000000;
+  border-radius: 2px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-fill-upper {
+  background: #2497E3;
+  border: 0px solid #000000;
+  border-radius: 2px;
+  box-shadow: 0px 0px 0px #000000;
+}
+input[type=range]::-ms-thumb {
+  margin-top: 1px;
+  box-shadow: 0px 0px 0px #000000;
+  border: 1px solid #2497E3;
+  height: 18px;
+  width: 18px;
+  border-radius: 25px;
+  background: #A1D0FF;
+  cursor: pointer;
+}
+input[type=range]:focus::-ms-fill-lower {
+  background: #2497E3;
+}
+input[type=range]:focus::-ms-fill-upper {
+  background: #2497E3;
 }
